# intro_robot_programming

./: test.cpp
rwa1_zinobile/: CMakeLists.txt
rwa1_zinobile/exercise1/src/: exercise1  exercise1.cpp
rwa1_zinobile/exercise2/src/: exercise2.cpp
rwa1_zinobile/exercise3/src/: exercise3  exercise3.cpp
rwa2_zinobile/: CMakeLists.txt
rwa2_zinobile/kitting/doc/: Doxyfile
rwa2_zinobile/kitting/doc/html/: dir_000001_000000.html  dir_000002_000001.html  dir_198b76f2cb8009dc4680a5bc2f884e6a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_9a937495bdb4431cfabd886f865a4c1c.html  dir_9a937495bdb4431cfabd886f865a4c1c_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d7da572655e0c7bf134af94d6faa0f89.html  dir_d7da572655e0c7bf134af94d6faa0f89_dep.map  files.html  globals.html  globals_func.html  graph_legend.html  index.html  kitting_8cpp.html  kitting_8cpp__incl.map  kitting_8cpp__incl.md5  kitting_8cpp_source.html  kitting_8hpp.html  kitting_8hpp__dep__incl.map  kitting_8hpp__dep__incl.md5  kitting_8hpp__incl.map  kitting_8hpp__incl.md5  kitting_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  menudata.js
rwa2_zinobile/kitting/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
rwa2_zinobile/kitting/doc/latex/: dir_198b76f2cb8009dc4680a5bc2f884e6a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_9a937495bdb4431cfabd886f865a4c1c.tex  dir_9a937495bdb4431cfabd886f865a4c1c_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d7da572655e0c7bf134af94d6faa0f89.tex  dir_d7da572655e0c7bf134af94d6faa0f89_dep.md5  files.tex  kitting_8cpp.tex  kitting_8cpp__incl.md5  kitting_8cpp_source.tex  kitting_8hpp.tex  kitting_8hpp__dep__incl.md5  kitting_8hpp__incl.md5  kitting_8hpp_source.tex  main_8cpp.tex  main_8cpp__incl.md5  main_8cpp_source.tex  refman.tex
rwa2_zinobile/kitting/include/: kitting.hpp
rwa2_zinobile/kitting/src/: kitting.cpp  main.cpp
